<resources>
    <string name="app_name">PAM1 - Atividade - Layout</string>
    <string name="textGasto">Tipo de gasto:</string>
    <string name="textValor">Valor:</string>
    <string name="textData">Data:</string>
    <string name="textDescricao">Descrição:</string>
    <string name="textLocal">Local:</string>
    <string name="btnSelecione">SELECIONE</string>
    <string name="btnSalvar">SALVAR</string>
    <string name="branco"> </string>
    <string name="textData1">Data 1</string>
    <string name="textData2">Data 2</string>
</resources>
